# kube-borg-backup

./: .ct.yaml  .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.yaml  mypy.ini
.github/workflows/: app-borgbackup-essentials.yaml  app-kube-pvc-snapshot.yaml  app-kube-snapshot-borgbackup.yaml  backup-runner-image.yaml  cleanup-dev-images.yaml  controller-image.yaml  essentials-image.yaml  lint-test.yaml  mypy.yaml  release-pipeline.yaml  release.yaml  ruff.yaml
apps/: Dockerfile.backup-runner  Dockerfile.controller  pyproject.toml  requirements-dev.txt  setup.py
apps/backup-runner/: Dockerfile  __init__.py  backup.py  common.py  list.py  restore.py  run.py
apps/borgbackup-essentials/: Dockerfile
apps/cli/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
apps/cli/kbb/: __init__.py  hooks.py  main.py  restore_helpers.py  utils.py
apps/cli/kbb/commands/: __init__.py  backup.py  snapshot.py
apps/common/: __init__.py  hooks.py  k8s_retry.py  pod_monitor.py
apps/controller/: Dockerfile  requirements.txt
apps/essentials/: Dockerfile  run.py  run.sh
apps/kube-pvc-snapshot/: Dockerfile  config.yaml  configmap.yaml.j2  main.py
apps/kube-snapshot-borgbackup/: Dockerfile  config.yaml  main.py  pod.yaml.j2
charts/kube-borg-backup/: Chart.yaml  values.yaml
charts/snapshot-borgbackup/: Chart.yaml  values.yaml
docs/: repo-setup.md
example/: .gitignore  values.yaml
immich/: values.yaml
tests/: tpl-config
todo_migrate/: cronjob-borgbackup.yaml  pvc.yaml  secrets-borg.yaml  secrets-ssh.yaml
(+22 files in other folders)
